# grep-clone

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.c
